MusicPlayer: Fix center aligned buttons

--- a/src/packages/default/MusicPlayer/main.css
+++ b/src/packages/default/MusicPlayer/main.css
@@ -42,3 +42,6 @@
 .ApplicationMusicPlayerWindow gui-audio {
   display : none;
 }
+.ApplicationMusicPlayerWindow gui-button-bar {
+  text-align : center;
+}
